[tool.poetry]
name = "poetry-add-numbers"
version = "0.1.0"
description = ""
authors = ["Yassine Damiri <yassinedamiri007@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_add_numbers"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
